Ignore whitespace in nunjucks

--- a/src/_includes/base-basic.njk
+++ b/src/_includes/base-basic.njk
@@ -12,17 +12,17 @@
     </title>
     <meta name="description" content="..." />
 
-    {% include "partials/fonts.njk" %}
+    {%- include "partials/fonts.njk" -%}
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2299%22>🧑‍💻</text></svg>" />
     <link rel="preconnect" href="https://www.nav.no" crossorigin />
     <link rel="preload" href="/assets/fonts/SourceSans3-normal-latin.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="/assets/main.min.css" type="text/css" />
-    {% block styles %}{% endblock %}
+    {%- block styles -%}{%- endblock -%}
 
     {# <script src="/assets/alpineFocus.min.js" type="text/javascript" defer></script> #}
     <script src="/assets/alpine.min.js" type="text/javascript" defer></script>
-    {% block script %}{% endblock %}
+    {%- block script -%}{%- endblock -%}
 
     {%- if environment === 'production' -%}
     <script type="text/javascript">(function(u,x,t,w,e,a,k,s){a=function(v){try{u.setItem(t+e,v)}catch(e){}v=JSON.parse(v);for(k=0;k<v.length;k++){s=x.createElement("script");s.text="(function(u,x,t,w,e,a,k){a=u[e]=function(){a.q.push(arguments)};a.q=[];a.t=+new Date;a.c=w;k=x.createElement('script');k.async=1;k.src=t;x.getElementsByTagName('head')[0].appendChild(k)})(window,document,'"+v[k].u+"',"+JSON.stringify(v[k].c)+",'"+v[k].g+"')";x.getElementsByTagName("head")[0].appendChild(s)}};try{k=u.getItem(t+e)}catch(e){}if(k){return a(k)}k=new XMLHttpRequest;k.onreadystatechange=function(){if(k.readyState==4&&k.status==200)a(k.responseText)};k.open("POST",w+e);k.send(x.URL)})(sessionStorage,document,"uxt:","https://api.uxtweak.com/snippet/","d9cb00da-f322-463a-9508-172bb4698de0");</script>
@@ -37,7 +37,7 @@
       notifyOpen: false
     }">
     <div class="relative z-10 bg-white" >
-    {% include "partials/banner.njk" %}
+    {%- include "partials/banner.njk" -%}
 
     <header class="relative z-10 grid bg-white isolate grid-cols-layout shadow-border" >
       <nav class="flex items-center w-full gap-8 col-wide">
@@ -58,7 +58,7 @@
       </nav>
     </header>
 
-    {% block content %}{% endblock %}
+    {%- block content -%}{%- endblock -%}
 
     <footer class="grid self-end pt-6 pb-12 text-lg text-blue-500 bg-white border-t-2 border-blue-800 grid-cols-layout">
       <div class="flex gap-12 col-wide">
@@ -71,7 +71,7 @@
       </div>
     </footer>
 
-    {% include "partials/prototypeNav.njk" %}
+    {%- include "partials/prototypeNav.njk" -%}
     </div>
   </body>
 </html>
