--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -2,13 +2,13 @@
   <div class="grid grid-cols-layout py-clamp-gap">
     <h2 class="text-base font-semibold tracking-widest uppercase col-wide text-deepblue-300">Sider i prototypen</h2>
     <ul class="divide-y divide-gray-400/25 col-wide">
-    {% for page in collections.template | sort(false, false, 'data.order') %}
+    {%- for page in collections.template | sort(false, false, 'data.order') -%}
       <li class="">
         <a href="{{ page.url }}" class="inline-block py-4 fine:hover:text-blue-300 fine:hover:underline decoration-from-font underline-offset-4">
         {{ page.data.title | safe }}
         </a>
       </li>
-    {% endfor %}
+    {%- endfor -%}
     </ul>
   </div>
 </aside>
