--- a/src/pages/artikkel/artikkel.njk
+++ b/src/pages/artikkel/artikkel.njk
@@ -4,9 +4,9 @@ description: 'Nyheter og statistikk.'
 order: 15
 bodyClass: 'bg-gray-100'
 ---
-{% extends 'base.njk' %}
+{%- extends 'base.njk' -%}
 
-{% block content %}
+{%- block content -%}
   <main class="min-h-[61vh] text-lg text-gray-800">
     <div class="grid pt-8 pb-20 bg-white md:pt-12 grid-cols-layout">
       <div class="col-normal">
@@ -112,7 +112,7 @@ bodyClass: 'bg-gray-100'
       </div>
     </div>
   </main>
-{% endblock %}
+{%- endblock -%}
 
-{% block styles %}{% endblock %}
-{% block script %}{% endblock %}
+{%- block styles -%}{%- endblock -%}
+{%- block script -%}{%- endblock -%}
