--- a/src/pages/kontor/kontor.njk
+++ b/src/pages/kontor/kontor.njk
@@ -4,9 +4,9 @@ description: ''
 order: 3
 bodyClass: 'bg-white'
 ---
-{% extends 'base.njk' %}
+{%- extends 'base.njk' -%}
 
-{% block content %}
+{%- block content -%}
   <main class="min-h-[61vh] text-lg text-gray-800">
 
     <div class="grid pt-8 pb-4 grid-cols-layout ">
@@ -81,18 +81,18 @@ bodyClass: 'bg-white'
       <div class="col-narrow">
         <div class="max-w-prose">
 
-          {% for box in boxes %}
+          {%- for box in boxes -%}
             {{ iconBox(box) }}
-          {% endfor %}
+          {%- endfor -%}
 
         </div>
       </div>
     </div>
 
   </main>
-{% endblock %}
+{%- endblock -%}
 
-{% macro iconBox(box) %}
+{%- macro iconBox(box) -%}
   <div class="grid isolate">
     <div class="z-10 grid w-16 mx-auto translate-y-1/2 bg-blue-100 rounded-full place-items-center aspect-square">
       {{ box.icon | svgContents('w-7 h-7 shrink-0') | safe }}
@@ -104,7 +104,7 @@ bodyClass: 'bg-white'
       </div>
     </div>
   </div>
-{% endmacro %}
+{%- endmacro -%}
 
-{% block styles %}{% endblock %}
-{% block script %}{% endblock %}
+{%- block styles -%}{%- endblock -%}
+{%- block script -%}{%- endblock -%}
