--- a/src/pages/kyrillisk.njk
+++ b/src/pages/kyrillisk.njk
@@ -2,9 +2,9 @@
 language: 'uk'
 ---
 
-{% extends "base.njk" %}
+{%- extends "base.njk" -%}
 
-{% block content %}
+{%- block content -%}
   <main class="py-8 pb-12 text-xl md:py-12 px-clamp-gap">
     <h1 class="max-w-screen-lg mx-auto text-3xl font-semibold leading-tight md:leading-none md:text-5xl md:text-center">Kyrillisk subset til fonten Source Sans 3</h1>
     <div class="grid max-w-screen-lg gap-12 mx-auto mt-8 md:mt-12 md:grid-cols-2">
@@ -19,4 +19,4 @@ language: 'uk'
     </div>
     </div>
   </main>
-{% endblock %}
+{%- endblock -%}
