--- a/src/_includes/macros/filterGroup.njk
+++ b/src/_includes/macros/filterGroup.njk
@@ -2,11 +2,11 @@
   params = { title, array, value }
 #}
 
-{% macro filterGroup(params) %}
+{%- macro filterGroup(params) -%}
 <fieldset class="mt-6 lg:mt-8">
   <legend class="text-sm tracking-widest uppercase opacity-70">{{ params.title }}</legend>
 
-  {% set buttonClasses = "inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base rounded-full focus:ring-2" %}
+  {%- set buttonClasses = "inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base rounded-full focus:ring-2" -%}
 
   <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
     <li>
@@ -17,7 +17,7 @@
         x-bind:class="{{ params.value }} === 'alle' ? 'text-white bg-deepblue-500' : 'bg-gray-100 fine:hover:bg-deepblue-100'"
       >Alle</button>
     </li>
-    {% for item in params.array %}
+    {%- for item in params.array -%}
     <li>
       <button
         type="button"
@@ -26,7 +26,7 @@
         x-bind:class="{{ params.value }} === '{{ item | slugify }}' ? 'text-white bg-deepblue-500' : 'bg-gray-100 fine:hover:bg-deepblue-100'"
       >{{ item }}</button>
     </li>
-    {% endfor %}
+    {%- endfor -%}
   </ul>
 </fieldset>
-{% endmacro %}
+{%- endmacro -%}
