--- a/src/pages/omrade/omrade.njk
+++ b/src/pages/omrade/omrade.njk
@@ -4,9 +4,9 @@ description: ''
 order: 2
 activeRole: 'Arbeidsgiver'
 ---
-{% extends 'base.njk' %}
+{%- extends 'base.njk' -%}
 
-{% block content %}
+{%- block content -%}
   <main class="">
     <div class="grid pt-8 bg-white grid-cols-layout">
       <div class="flex justify-between col-wide">
@@ -18,11 +18,11 @@ activeRole: 'Arbeidsgiver'
       <div class="col-wide">
         <h2 class="-mt-2 text-xl font-semibold sr-only md:text-3xl">Hva gjelder det</h2>
         <ul class="grid gap-2 mt-4 md:grid-cols-2 sm:gap-3 md:gap-6 lg:grid-cols-3">
-          {% for item in situationList %}
+          {%- for item in situationList -%}
             <li class="relative flex gap-4 px-4 py-4 bg-white rounded-lg shadow-sm min-h-[12rem]">
-              {% if item.icon %}
+              {%- if item.icon -%}
               {{ item.icon | svgContents("self-center flex-none w-12 h-12 md:w-16 md:h-16") | safe }}
-              {% endif %}
+              {%- endif -%}
               <div class="flex flex-col flex-1">
               <h3 class="text-xl leading-snug ">
                 <a class="after:absolute after:inset-0 max-w-[30ch] font-semibold md:text-2xl" href="#">
@@ -33,10 +33,10 @@ activeRole: 'Arbeidsgiver'
               <p class="mt-auto text-sm tracking-wider uppercase opacity-70">{{ item.category }}</p>
               </div>
             </li>
-          {% endfor %}
+          {%- endfor -%}
         </ul>
       </div>
     </div>
 
   </main>
-{% endblock %}
+{%- endblock -%}
