--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -3,12 +3,12 @@ title: 'Produktside'
 description: ''
 order: 4
 ---
-{% extends 'base.njk' %}
+{%- extends 'base.njk' -%}
 
 {%- from "macros/button.njk" import button -%}
 {%- from "macros/microcard.njk" import microcard -%}
 
-{% block content %}
+{%- block content -%}
   <main class="py-8 text-lg md:py-12 px-clamp-gap">
     <div class="relative max-w-screen-lg mx-auto grid sm:grid-cols-[6rem_auto] gap-x-8 items-start mb-12">
       {{ '/src/_includes/svg/pictograms/utvidet-barnetrygd.svg' | svgContents('w-[calc(8vw+3rem)] h-auto max-w-24 md:-ml-2 text-green-800 absolute right-0 top-3 sm:static') | safe }}
@@ -32,11 +32,11 @@ order: 4
         {# Innholdsfortegnelse #}
         <div class="w-full max-w-3xl mt-6 md:sticky md:col-start-2 md:top-4 md:row-span-2 md:mx-0 md:max-w-none md:-mt-1.5 md:pl-6 md:border-l md:border-gray-200">
           <h2 class="text-xl font-semibold">Innhold</h2>
-          {% set index = sections.slice(1) %}
+          {%- set index = sections.slice(1) -%}
           <ul class="pt-1">
-            {% for item in index %}
+            {%- for item in index -%}
               <li class="py-1.5 text-xl"><a class="text-blue-500 underline decoration-blue-300 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#{{ item.title | slugify }}">{{ item.title }}</a></li>
-            {% endfor %}
+            {%- endfor -%}
           </ul>
 
           <h2 class="mt-8 text-xl font-semibold">Nyttig å vite</h2>
@@ -62,14 +62,14 @@ order: 4
           </div>
 
           {# Innhold #}
-          {% for section in sections %}
-            {% if not loop.first %}
+          {%- for section in sections -%}
+            {%- if not loop.first -%}
             <div class="relative p-6 grid bg-gray-50 rounded max-w-prose min-w-0 sm:p-8 {{ 'mt-12 pt-8 sm:pt-12' if section.icon }}" id="{{ section.title | slugify }}">
-              {% if section.icon %}
+              {%- if section.icon -%}
               <div class="absolute top-0 inline-grid p-4 mx-auto -translate-x-1/2 -translate-y-1/2 bg-green-200 rounded-full left-1/2 justify-self-center">
                 {{ section.icon | svgContents('w-6 h-6 sm:w-7 sm:h-7') | safe }}
               </div>
-              {% endif %}
+              {%- endif -%}
 
               <h2 class="text-3xl font-semibold sm:text-4xl sm:leading-snug {{ 'md:-mt-2' if section.icon }}">{{ section.title | safe }}</h2>
               <a href="#" class="inline-flex items-center gap-2 mt-4 mb-8 text-base text-blue-500 hover:underline hover:text-blue-600">
@@ -77,16 +77,16 @@ order: 4
                 <span>Kopier lenke</span>
               </a>
               <div class="markdown">
-              {% for block in section.contentBlocks %}
-                {% if block.type === 'markdown' %}
+              {%- for block in section.contentBlocks -%}
+                {%- if block.type === 'markdown' -%}
                   <div class="markdown">
                     {{ block.data  | markdown | safe }}
                   </div>
-                {% endif %}
+                {%- endif -%}
 
-                {% if block.type === 'actions' %}
+                {%- if block.type === 'actions' -%}
                 <div class="grid gap-1.5 sm:flex">
-                  {% for item in block.data %}
+                  {%- for item in block.data -%}
                     {{ button(
                       {
                         text: item.text,
@@ -94,42 +94,42 @@ order: 4
                         variant: item.variant
                       }
                     ) }}
-                  {% endfor %}
+                  {%- endfor -%}
                 </div>
-                {% endif %}
+                {%- endif -%}
 
-                {% if block.type === 'microcards' %}
+                {%- if block.type === 'microcards' -%}
                   <h4 class="text-xl font-semibold">{{ block.title | safe }}</h4>
                   <div class="flex mt-1 flex-wrap gap-1.5">
-                    {% for item in block.data %}
+                    {%- for item in block.data -%}
                       {{ microcard(item) }}
-                    {% endfor %}
+                    {%- endfor -%}
                   </div>
-                {% endif %}
+                {%- endif -%}
 
-                {% if block.type === 'tiles' %}
+                {%- if block.type === 'tiles' -%}
                   <h4 class="text-xl font-semibold">{{ block.title | safe }}</h4>
                   <div class="grid gap-3 mt-1">
-                    {% for item in block.data %}
+                    {%- for item in block.data -%}
                       <div class="relative flex items-center gap-4 px-4 py-3 bg-white rounded-lg shadow-sm hover:shadow hover:z-10 transition-colors duration-200 ease-out {{ item.hover }} ring-1 ring-gray-500/5">
                         {{ item.icon | svgContents('max-w-16 h-auto w-[calc(8vw+1rem)]') | safe }}
                         <a class="flex-1 text-xl font-semibold leading-snug after:absolute after:inset-0" href="#">{{ item.title }}</a>
                       </div>
-                    {% endfor %}
+                    {%- endfor -%}
                   </div>
-                {% endif %}
+                {%- endif -%}
 
-                {% if block.type === 'line' %}
+                {%- if block.type === 'line' -%}
                   <hr class="border-deepblue-100" />
-                {% endif %}
+                {%- endif -%}
 
-              {% endfor %}
+              {%- endfor -%}
               </div>
             </div>
-            {% endif %}
-          {% endfor %}
+            {%- endif -%}
+          {%- endfor -%}
         </div>
       </div>
     </div>
   </main>
-{% endblock %}
+{%- endblock -%}
