--- a/src/pages/produktoversikt/samarbeidspartner/samarbeidspartner.njk
+++ b/src/pages/produktoversikt/samarbeidspartner/samarbeidspartner.njk
@@ -4,13 +4,13 @@ description: 'Pengestøtter og tjenester fra NAV for samarbeidspartnere. Du kan
 order: '3'
 permalink: '/produktoversikt-samarbeidspartner/'
 ---
-{% extends 'base.njk' %}
+{%- extends 'base.njk' -%}
 
 {%- from "macros/button.njk" import button -%}
 {%- from "macros/microcard.njk" import microcard -%}
 {%- from "macros/filterGroup.njk" import filterGroup -%}
 
-{% block content %}
+{%- block content -%}
   <main class="py-12 text-lg text-gray-900">
     <div class="grid grid-cols-layout">
       <div class="relative w-full col-narrow lg:col-wide">
@@ -28,13 +28,13 @@ permalink: '/produktoversikt-samarbeidspartner/'
     <div class="grid mt-8 lg:mt-12 grid-cols-layout">
       <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start col-narrow lg:col-wide">
         <ul class="text-xl max-w-prose">
-        {% for item in roleFilter %}
+        {%- for item in roleFilter -%}
           <li class="border-t border-gray-300">
             <a class="relative z-10 flex px-3 py-3 -mx-3 rounded ring-1 ring-transparent fine:hover:ring-deepblue-50 fine:hover:bg-deepblue-50" href="/produktoversikt-samarbeidspartner/{{ item | slugify }}/">{{ item | safe }}</a>
           </li>
-        {% endfor %}
+        {%- endfor -%}
         </ul>
       </div>
     </div>
   </main>
-{% endblock %}
+{%- endblock -%}
